test/e2e/testdata/route-status-cleanup-multiple-parents-multiple-gwcs.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-1
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: foo
    protocol: TCP
    port: 8080
    allowedRoutes:
      kinds:
      - kind: TCPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-route-status-cleanup
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-1
    sectionName: foo
  # This gateway (and its gatewayclass) is created through `status-cleanup-gateway-different-gwc.yaml` manifest.
  - name: gateway-2
    sectionName: foo
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
